<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Take a Hike!</string>
    <string name="routes">Routes</string>
    <string name="start_hike">Start</string>
    <string name="show_map">Map</string>
    <string name="compass_rose">Compass Rose</string>
    <string name="compass_target">Compass Target</string>
    <string name="location_detail">Location</string>
    <string name="reward">Reward</string>
    <string name="view_reward">View Reward</string>
    <string name="route_image">Route Image</string>
    <string name="reward_image">Reward Image</string>
    <string name="share_reward">Share Reward</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="found_it">Great! You found it!</string>
    <string name="next_stop">Next Stop &#8230;</string>
    <string name="route_continue">Continue!</string>
    <string name="checkin_look_around">Look around! Have you found it?</string>
    <string name="checkin_close">You are close!</string>
    <string name="orientation_map">Map</string>
    <string name="target_icon">Target Icon</string>
    <string name="target_distance_m">%.0fm</string>
    <string name="target_distance_km">%.1fkm</string>
    <string name="share_reward_using">Share reward using</string>
    <string name="not_found_dialog_title">Not visited yet!</string>
    <string name="not_found_dialog_message">Hike to discover places and find out more about them. Go hike now?</string>
    <string name="not_found_dialog_yes">Let\'s go!</string>
    <string name="not_found_dialog_no">Not now</string>
    <string name="app_id">547542925309510</string>
    <string name="earned_reward">I just earned a "%s" badge by playing Take a Hike!</string>
    <string name="share_reward_success">Success</string>
    <string name="share_reward_success_message">Thanks for sharing your badge with friends</string>
    <string name="share_reward_error">Sorry, there was an error sharing your badge</string>

    <!-- Translated -->

    <string name="first_launch_title">Welcome!</string>
    <string name="first_launch_message">Thanks for downloading Take a Hike! Since this is the first time you used the app let us take you through some setup.\n
          First, let\'s find out where you are so that we can serve you relevant content. On the next screen, you will select one city.\n
          Please make sure that the location services are enabled in the phone settings.\n
          It may take a little bit for your phone to get a lock on your location, so bear with us. Tap OK to continue.</string>
    <string name="city_list_locating">Locating you</string>
    <string name="city_list_loading_cities">Loading cities</string>
    <string name="city_list_section_within">Close by</string>
    <string name="city_list_section_other">All cities</string>
    <string name="city_list_actionbar_title">Choose City</string>
    <string name="content_grid_actionbar_title">Profiles</string>
    <string name="content_grid_loading_catalog">Loading Catalog</string>
    <string name="content_grid_downloading_images">Offlining Images</string>
    <string name="content_grid_update_available">Update Available</string>
    <string name="route_detail_go_hike">Go Hike!</string>
    <string name="route_detail_download">Download Route</string>
    <string name="route_detail_update">Update Route</string>
    <string name="route_detail_facebook">Connect to Facebook to Download</string>
    <string name="route_detail_downloading_route">Downloading Route</string>
    <string name="route_detail_updating_route">Updating Route</string>
    <string name="route_detail_downloading_images">Offlining Images</string>
    <string name="settings">Settings</string>
    <string name="settings_facebook_text">In order to enhance your experience with Take a Hike!, please consider connecting to Facebook. Once connected, you will be able to keep your progress and rewards across multiple devices.</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_of_service">Terms of Service</string>

</resources>