<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/layout_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/settings_facebook_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/settings_facebook_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.facebook.widget.LoginButton
        android:id="@+id/settings_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/settings_privacy_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/settings_privacy_policy" />

    <Button
        android:id="@+id/settings_tos_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/settings_terms_of_service" />

</LinearLayout>